# rust-simpleinfra-340

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: json.yml  markdown.yml  rust.yml  yaml.yml
src/: crates.rs  main.rs  releases.rs
