[package]
name = "rust-simpleinfra-340"
version = "0.1.0"
edition = "2021"

# This is an internal tool used for debugging a specific issue.
# It does not need to be published to crates.io.
publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
