[package]
name = "rust-simpleinfra-340"
version = "0.1.0"
edition = "2021"

# This is an internal tool used for debugging a specific issue.
# It does not need to be published to crates.io.
publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.4.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
